--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.5.1
 jedi==0.17.2
 Jinja2==2.11.2
+joblib==0.17.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.7
@@ -61,12 +62,14 @@ qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.25.0
 retrying==1.3.3
+scikit-learn==0.23.2
 scipy==1.5.3
 seaborn==0.11.0
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.1
 testpath==0.4.4
+threadpoolctl==2.1.0
 tornado==6.0.4
 traitlets==5.0.5
 urllib3==1.26.1
